# codingdesktop

./: .gitignore  CLAUDE.md  README.md  minisign.pub  package-lock.json  package.json
.claude/: settings.local.json
docs/: design-spec.md  release-known-issues.md
docs/plans/: 2026-02-22-claude-code-desktop-design.md  2026-02-22-claude-code-desktop-impl.md  2026-02-27-terminal-split-view-design.md
scripts/: build-dmg.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: chat_runner.rs  codex_usage.rs  history.rs  lib.rs  message_runner.rs  pty_manager.rs
src/components/: BranchSwitcher.tsx  BugTrackerPanel.tsx  ChatArea.tsx  ChatView.tsx  CodexUsagePanel.tsx  CommitHistory.tsx  FileTree.tsx  InputBar.tsx  LaunchpadPanel.tsx  LiveTerminal.tsx  MessageBubble.tsx  QuickActionsPanel.tsx  Sidebar.tsx  SkillsPanel.tsx  StatusBar.tsx  TabBar.tsx  Terminal.tsx
src/hooks/: useHistory.ts  useSession.ts
src/styles/: global.css
