[package]
name = "claude-desktop"
version = "0.1.0"
description = "Claude Code Desktop GUI"
authors = ["you"]
edition = "2021"

[lib]
name = "claude_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "claude-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
dirs = "6"
which = "7"
