[package]
name = "coding-desktop"
version = "0.9.21"
description = "Coding Desktop GUI"
authors = ["you"]
edition = "2021"

[lib]
name = "coding_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "coding-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
dirs = "6"
which = "7"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
chrono = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
regex = "1.11"
base64 = "0.22"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
